#288 Fix scrolling on iphone - Add the script that replaces the height property in vh per px only mobile device. Also added a new class for better use and fix ui bugs on small mobile

--- a/_assets/css/layout/_main-screen.scss
+++ b/_assets/css/layout/_main-screen.scss
@@ -171,12 +171,6 @@
   }
 }
 
-@media screen and (max-width: 359px) {
-  .btn-scroll-down {
-    bottom: 30px;
-  }
-}
-
 @media screen and ($b_no_mobile) {
   .animation .btn-scroll-down {
     bottom: 169px;
